--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@taiga-ui/cdk": "^2.22.0",
+    "@taiga-ui/core": "^2.22.0",
+    "@taiga-ui/icons": "^2.22.0",
+    "@taiga-ui/kit": "^2.22.0",
+    "@tinkoff/ng-dompurify": "3.0.0",
+    "dompurify": "2.2.9",
     "express": "^4.17.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
@@ -30,6 +36,7 @@
     "@angular-devkit/build-angular": "~13.0.1",
     "@angular/cli": "~13.0.1",
     "@angular/compiler-cli": "~13.0.0",
+    "@types/dompurify": "2.2.3",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "@types/uuid": "^8.3.1",
